# serpyco

./: .gitignore  .gitlab-ci.yml  .isort.cfg  CHANGELOG.md  LICENSE  README.md  README.rst  benchmark.py  benchmark_load.py  conf.py  dataclasses_serializer.pyx  example.py  index.rst  pyproject.toml  requirements.txt  serpyco.pyx  setup.cfg  setup.py  test.py  test_load.py  test_val.py
docs/: api.rst  benchmark.rst  getting_started.rst  index.rst
docs/examples/: complex_dump.py  decorator.py  encoder.py  number_field.py  simple_dump.py  simple_load.py  string_field.py
serpyco/: __init__.py  decorator.py  encoder.pxd  encoder.pyi  encoder.pyx  exception.py  field.py  mixin.py  schema.py  serializer.c  serializer.pyi  serializer.pyx  serpyco.c  util.py  val.pyx  validator.py  valijson.cpp  valijson.h  valijson.pyx
tests/: benchmark.py  test_benchmarks.py  test_unit.py
