[aliases]
test=pytest

[flake8]
filename = *.pyx,*.px*,*.py
max-line-length = 88
exclude = .eggs,*.egg,build
ignore = E901,E225,E226,E227,E999,W503,W504

[options]
setup_requires = cython

[isort]
known_first_party=serpyco
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88